--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ JapTask1BackendCorrection/bld/
 JapTask1BackendCorrection/JapTask1BackendCorrection.Core/[Bb]in/
 JapTask1BackendCorrection/JapTask1BackendCorrection.Core/[Oo]bj/
 JapTask1BackendCorrection/JapTask1BackendCorrection.Infrastructure/[Bb]in/
-JapTask1BackendCorrection/JapTask1BackendCorrection.Infrastructureore/[Oo]bj/
+JapTask1BackendCorrection/JapTask1BackendCorrection.Infrastructure/[Oo]bj/
 JapTask1BackendCorrection/JapTask1BackendCorrection.Web/[Bb]in/
 JapTask1BackendCorrection/JapTask1BackendCorrection.Web/[Oo]bj/
 JapTask1BackendCorrection/Tests/[Bb]in/
