added elastic search

--- a/JapTask1BackendCorrection/JapTask1BackendCorrection.Web/appsettings.json
+++ b/JapTask1BackendCorrection/JapTask1BackendCorrection.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "elasticsearch": {
+    "index": "moviesapp",
+    "url": "http://localhost:9200/"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=moviesapp; Trusted_Connection=true;"
   },
