--- a/JapTask1BackendCorrection/JapTask1BackendCorrection.Web/JapTask1BackendCorrection.Web.csproj
+++ b/JapTask1BackendCorrection/JapTask1BackendCorrection.Web/JapTask1BackendCorrection.Web.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NEST" Version="7.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
   </ItemGroup>
